<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="startdate">Дата начала</string>
    <string name="task_name">Название задачи</string>
    <string name="set_start">Установить начало события</string>
    <string name="description">Описание</string>
    <string name="set_end">Дата и время окончания</string>
    <string name="end_button">Установить конец события</string>
    <string name="start_button">Дата и время начала события</string>
    <string name="end_date">Дата завершения</string>
</resources>