<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.DetailedTaskFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <TextView
        android:id="@+id/NametextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toEndOf="@+id/labelName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/DescriptionTextView"
        android:layout_width="239dp"
        android:layout_height="53dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toEndOf="@+id/labelDesc"
        app:layout_constraintTop_toBottomOf="@+id/NametextView" />

    <TextView
        android:id="@+id/StartDatetextView"
        android:layout_width="167dp"
        android:layout_height="29dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="92dp"
        app:layout_constraintStart_toEndOf="@+id/labelstarting"
        app:layout_constraintTop_toBottomOf="@+id/labelName" />

    <TextView
        android:id="@+id/labelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="35dp"
        android:text="@string/task_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelName" />

    <TextView
        android:id="@+id/labelstarting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="44dp"
        android:text="@string/startdate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelDesc" />

    <TextView
        android:id="@+id/labelending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:text="@string/end_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StartDatetextView" />

    <TextView
        android:id="@+id/EndDatetextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="22dp"
        app:layout_constraintStart_toEndOf="@+id/labelending"
        app:layout_constraintTop_toBottomOf="@+id/StartDatetextView" />

</androidx.constraintlayout.widget.ConstraintLayout>
